# tri_peaks_solitaire

./: CMakeLists.txt  README.md
deckOfCards/: Svg-cards-2.0.xcf
include/: AnimationWrapper.hpp  Card.hpp  CardFromGraph.hpp  Command.hpp  ControllerTriPeaks.hpp  Deck.hpp  DrawCard.hpp  ModelTriPeaks.hpp  Node.hpp  ViewTriPeaks.hpp
src/: AnimationWrapper.cpp  Card.cpp  CardFromGraph.cpp  ControllerTriPeaks.cpp  Deck.cpp  DrawCard.cpp  Main.cpp  ModelTriPeaks.cpp  Node.cpp  ViewTriPeaks.cpp
